--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </div>
                 <div class = "lowerCard">
 
-                    <h3 class = "cardTitle"> All clockfaces (17+) </h3>
+                    <h3 class = "cardTitle"> All clockfaces (18+) </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -151,7 +151,7 @@
                       </div>
                         </div>
 
-                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3375" target = "_blank" draggable="false"><button class = "cardButton"> $18.49 </button></a>
+                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3375" target = "_blank" draggable="false"><button class = "cardButton"> $18.99 </button></a>
 
                 </div>
             </div>
@@ -364,9 +364,7 @@
                     </div>
                 </div>
 
-                <div class = "mainCardSoon">
-
-                    <div class = "markedButton"> Soon </div>
+                <div class = "mainCard">
 
                     <div class = "upperCard">
 
@@ -376,6 +374,35 @@
                     <div class = "lowerCard">
 
                         <h3 class = "cardTitle"> Sidebar </h3>
+
+                        <div class = "infoSection">
+                          <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        </div>
+                        <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                      </div>
+                        </div>
+
+                       <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4004" target="_blank"><button class = "cardButton"> $1.99</button></a>
+
+                    </div>
+                </div>
+
+                <div class = "mainCardSoon">
+
+                    <div class = "markedButton"> Soon </div>
+
+                    <div class = "upperCard">
+
+                        <img class = "cardImage" src = "images/treeScreen.jpg" draggable="false">
+
+                    </div>
+                    <div class = "lowerCard">
+
+                        <h3 class = "cardTitle"> Summer Dream </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -422,9 +449,7 @@
                     </div>
                 </div>
 
-                <div class = "mainCardSoon">
-
-                    <div class = "markedButton"> Soon </div>
+                <div class = "mainCard">
 
                     <div class = "upperCard">
 
@@ -446,7 +471,7 @@
                       </div>
                         </div>
 
-                       <button class = "cardButton"> $1.99</button>
+                       <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4124" target="_blank"><button class = "cardButton"> $1.99</button></a>
 
                     </div>
                 </div>
