--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <div class = "mainCardBundle">
 
-                <div class = "markedButton"> Save 45% </div>
+                <div class = "markedButton"> Save 52% </div>
 
                 <div class = "upperCard">
 
@@ -138,7 +138,7 @@
                 </div>
                 <div class = "lowerCard">
 
-                    <h3 class = "cardTitle"> All clockfaces (18+) </h3>
+                    <h3 class = "cardTitle"> All clockfaces (21+) </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -151,7 +151,7 @@
                       </div>
                         </div>
 
-                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3375" target = "_blank" draggable="false"><button class = "cardButton"> $18.99 </button></a>
+                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3375" target = "_blank" draggable="false"><button class = "cardButton"> $19.99 </button></a>
 
                 </div>
             </div>
@@ -167,7 +167,7 @@
                     </div>
                     <div class = "lowerCard">
 
-                        <h3 class = "cardTitle"> Simple Stats (6+) </h3>
+                        <h3 class = "cardTitle"> Simple Stats (7+) </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -180,7 +180,7 @@
                       </div>
                         </div>
 
-                            <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3375" target = "_blank" draggable="false"><button class = "cardButton"> $8.00 </button></a>
+                            <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3375" target = "_blank" draggable="false"><button class = "cardButton"> $8.99 </button></a>
 
                     </div>
 
@@ -281,8 +281,6 @@
 
                 <div class = "mainCard">
 
-                    <div class = "markedButton"> Top Selling </div>
-
                     <div class = "upperCard">
 
                     <img class = "cardImage" src = "images/oceanStatsScreen.jpg" draggable="false">
@@ -310,6 +308,8 @@
 
                 <div class = "mainCard">
 
+                  <div class = "markedButton"> Top Selling </div>
+
                     <div class = "upperCard">
 
                     <img class = "cardImage" src = "images/sunsetStatsScreen.jpg" draggable="false">
@@ -335,9 +335,9 @@
                     </div>
                 </div>
 
-                <div class = "mainCardSoon">
+                <div class = "mainCard">
 
-                    <div class = "markedButton"> Soon </div>
+                    <div class = "markedButton"> New </div>
 
                     <div class = "upperCard">
 
@@ -359,12 +359,14 @@
                       </div>
                         </div>
 
-                       <button class = "cardButton"> $1.99</button>
+                      <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4115" target="_blank"> <button class = "cardButton"> $1.99</button></a>
 
                     </div>
                 </div>
 
                 <div class = "mainCard">
+
+                  <div class = "markedButton"> New </div>
 
                     <div class = "upperCard">
 
@@ -451,6 +453,8 @@
 
                 <div class = "mainCard">
 
+                  <div class = "markedButton"> New </div>
+
                     <div class = "upperCard">
 
                         <img class = "cardImage" src = "images/palmScreen.jpg" draggable="false">
@@ -476,9 +480,94 @@
                     </div>
                 </div>
 
-                <div class = "mainCard">
+                <div class = "mainCardSoon">
 
-                    <div class = "markedButton"> New </div>
+                    <div class = "markedButton"> Soon </div>
+
+                    <div class = "upperCard">
+
+                        <img class = "cardImage" src = "images/autumnScreen.jpg" draggable="false">
+
+                    </div>
+                    <div class = "lowerCard">
+
+                        <h3 class = "cardTitle"> Autumn Stats </h3>
+
+                        <div class = "infoSection">
+                          <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        </div>
+                        <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                      </div>
+                        </div>
+
+                       <button class = "cardButton"> $1.99</button>
+
+                    </div>
+                </div>
+
+                <div class = "mainCardSoon">
+
+                    <div class = "markedButton"> Soon </div>
+
+                    <div class = "upperCard">
+
+                        <img class = "cardImage" src = "images/spukyScreen.jpg" draggable="false">
+
+                    </div>
+                    <div class = "lowerCard">
+
+                        <h3 class = "cardTitle"> Spuky </h3>
+
+                        <div class = "infoSection">
+                          <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        </div>
+                        <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                      </div>
+                        </div>
+
+                       <button class = "cardButton"> $1.99</button>
+
+                    </div>
+                </div>
+
+                <div class = "mainCardSoon">
+
+                    <div class = "markedButton"> Soon </div>
+
+                    <div class = "upperCard">
+
+                        <img class = "cardImage" src = "images/trickScreen.jpg" draggable="false">
+
+                    </div>
+                    <div class = "lowerCard">
+
+                        <h3 class = "cardTitle"> Trick or Treat </h3>
+
+                        <div class = "infoSection">
+                          <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        </div>
+                        <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                      </div>
+                        </div>
+
+                       <button class = "cardButton"> $1.99</button>
+
+                    </div>
+                </div>
+
+                <div class = "mainCard">
 
                     <div class = "upperCard">
 
@@ -532,8 +621,6 @@
                     </div>
 
                     <div class = "mainCard">
-
-                            <div class = "markedButton"> New </div>
 
                             <div class = "upperCard">
 
@@ -830,7 +917,7 @@
 
             <div class = "giveawayHidden">
 
-            <p class = "giveawayCardPara"> Use this discount code when purchasing the "All Clockfaces" bundle to save additional 15%  </p>
+            <p class = "giveawayCardPara"> Use this discount code when purchasing the "All Clockfaces" bundle to save additional $5  </p>
 
             <div class = "giveawayInformation">
                 <p class = "informationTitle"> Discount code: </p>
@@ -838,7 +925,7 @@
             </div>
             <div class = "giveawayInformation">
                 <p class = "informationTitle"> Discount: </p>
-                <p class = "informationText"> 15% </p>
+                <p class = "informationText"> $5 </p>
             </div>
             <div class = "giveawayInformation">
                 <p class = "informationTitle"> Products: </p>
@@ -867,7 +954,7 @@
 
                     <div class = "giveawayHidden">
 
-                    <p class = "giveawayCardPara"> Use this discount code when purchasing the "All Clockfaces" bundle to save additional 15%  </p>
+                    <p class = "giveawayCardPara"> Use this discount code when purchasing the a bundle to save additional 10%  </p>
 
                     <div class = "giveawayInformation">
                         <p class = "informationTitle"> Discount code: </p>
@@ -875,11 +962,11 @@
                     </div>
                     <div class = "giveawayInformation">
                         <p class = "informationTitle"> Discount: </p>
-                        <p class = "informationText"> 15% </p>
+                        <p class = "informationText"> 10% </p>
                     </div>
                     <div class = "giveawayInformation">
                         <p class = "informationTitle"> Products: </p>
-                        <p class = "informationText"> All Clockfaces bundle </p>
+                        <p class = "informationText"> all bundles </p>
                     </div>
                     <div class = "giveawayInformation">
                         <p class = "informationTitle"> Max-uses: </p>
