--- a/index.html
+++ b/index.html
@@ -155,6 +155,40 @@
 
                 </div>
             </div>
+
+            <div class = "mainCardBundle">
+
+              <div class = "markedButton"> Until Dec </div>
+
+                    <div class = "upperCard">
+
+                        <div class = "slideButtonLeft" onclick="getBundleName(autumnBundle,this)"><i class="fas fa-chevron-left"></i></div>
+                        <div class = "slideButtonRight" onclick="getBundleName(autumnBundle,this)"><i class="fas fa-chevron-right"></i></div>
+
+                        <img class = "cardImage" src = "images/autumnBundle.jpg" draggable="false" id = "autumnBundle" draggable="false">
+
+                    </div>
+                    <div class = "lowerCard">
+
+                        <h3 class = "cardTitle"> Autumn Collection (4 faces) </h3>
+
+                        <div class = "infoSection">
+                          <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        </div>
+                        <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                      </div>
+                        </div>
+
+                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3978" target = "_blank" draggable="false"><button class = "cardButton"> $4.99 </button></a>
+
+                    </div>
+
+            </div>
+
             <div class = "mainCardBundle">
 
                     <div class = "upperCard">
@@ -243,37 +277,6 @@
                             </div>
 
                             <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3978" target = "_blank" draggable="false"><button class = "cardButton"> $4.00 </button></a>
-
-                        </div>
-
-                </div>
-
-                <div class = "mainCardBundle">
-
-                        <div class = "upperCard">
-
-                            <div class = "slideButtonLeft" onclick="getBundleName(frizzyBundle,this)"><i class="fas fa-chevron-left"></i></div>
-                            <div class = "slideButtonRight" onclick="getBundleName(frizzyBundle,this)"><i class="fas fa-chevron-right"></i></div>
-
-                            <img class = "cardImage" src = "images/frizzyBundleScreen.jpg" draggable="false" id = "frizzyBundle" draggable="false">
-
-                        </div>
-                        <div class = "lowerCard">
-
-                            <h3 class = "cardTitle"> Frizzy Bundle (2+) </h3>
-
-                            <div class = "infoSection">
-                              <div>
-                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
-                            </div>
-                            <div>
-                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
-                            <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
-                          </div>
-                            </div>
-
-                            <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3978" target = "_blank" draggable="false"><button class = "cardButton"> $2.49 </button></a>
 
                         </div>
 
@@ -492,6 +495,35 @@
                     <div class = "lowerCard">
 
                         <h3 class = "cardTitle"> Autumn Stats </h3>
+
+                        <div class = "infoSection">
+                          <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        </div>
+                        <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                      </div>
+                        </div>
+
+                       <button class = "cardButton"> $1.99</button>
+
+                    </div>
+                </div>
+
+                <div class = "mainCardSoon">
+
+                    <div class = "markedButton"> Soon </div>
+
+                    <div class = "upperCard">
+
+                        <img class = "cardImage" src = "images/fallScreen.jpg" draggable="false">
+
+                    </div>
+                    <div class = "lowerCard">
+
+                        <h3 class = "cardTitle"> Fall </h3>
 
                         <div class = "infoSection">
                           <div>
