--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <div class = "mainCardBundle">
 
-                <div class = "markedButton"> Save 52% </div>
+                <div class = "markedButton"> Save 55% </div>
 
                 <div class = "upperCard">
 
@@ -138,7 +138,7 @@
                 </div>
                 <div class = "lowerCard">
 
-                    <h3 class = "cardTitle"> All clockfaces (21+) </h3>
+                    <h3 class = "cardTitle"> All clockfaces (23+) </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -170,7 +170,7 @@
                     </div>
                     <div class = "lowerCard">
 
-                        <h3 class = "cardTitle"> Autumn Collection (4 faces) </h3>
+                        <h3 class = "cardTitle"> Autumn Collection (5 faces) </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -369,8 +369,6 @@
 
                 <div class = "mainCard">
 
-                  <div class = "markedButton"> New </div>
-
                     <div class = "upperCard">
 
                         <img class = "cardImage" src = "images/sidebarScreen.jpg" draggable="false">
@@ -396,9 +394,9 @@
                     </div>
                 </div>
 
-                <div class = "mainCardSoon">
+                <div class = "mainCard">
 
-                    <div class = "markedButton"> Soon </div>
+                    <div class = "markedButton"> New </div>
 
                     <div class = "upperCard">
 
@@ -420,7 +418,7 @@
                       </div>
                         </div>
 
-                       <button class = "cardButton"> $1.99</button>
+                       <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4172" target="_blank"><button class = "cardButton"> $1.99</button> </a>
 
                     </div>
                 </div>
@@ -456,8 +454,6 @@
 
                 <div class = "mainCard">
 
-                  <div class = "markedButton"> New </div>
-
                     <div class = "upperCard">
 
                         <img class = "cardImage" src = "images/palmScreen.jpg" draggable="false">
@@ -483,9 +479,9 @@
                     </div>
                 </div>
 
-                <div class = "mainCardSoon">
+                <div class = "mainCard">
 
-                    <div class = "markedButton"> Soon </div>
+                  <div class = "markedButton"> New </div>
 
                     <div class = "upperCard">
 
@@ -495,6 +491,35 @@
                     <div class = "lowerCard">
 
                         <h3 class = "cardTitle"> Autumn Stats </h3>
+
+                        <div class = "infoSection">
+                          <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        </div>
+                        <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                      </div>
+                        </div>
+
+                       <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4235" target="_blank"><button class = "cardButton"> $1.99</button></a>
+
+                    </div>
+                </div>
+
+                <div class = "mainCardSoon">
+
+                    <div class = "markedButton"> Soon </div>
+
+                    <div class = "upperCard">
+
+                        <img class = "cardImage" src = "images/redForestScreen.jpg" draggable="false">
+
+                    </div>
+                    <div class = "lowerCard">
+
+                        <h3 class = "cardTitle"> Red Forest </h3>
 
                         <div class = "infoSection">
                           <div>
