--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <div class = "mainCardBundle">
 
-                <div class = "markedButton"> Save 55% </div>
+                <div class = "markedButton"> Save 60% </div>
 
                 <div class = "upperCard">
 
@@ -138,7 +138,7 @@
                 </div>
                 <div class = "lowerCard">
 
-                    <h3 class = "cardTitle"> All clockfaces (23+) </h3>
+                    <h3 class = "cardTitle"> All clockfaces (24+) </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -394,18 +394,18 @@
                     </div>
                 </div>
 
-                <div class = "mainCard">
+                <div class = "mainCardSoon">
 
-                    <div class = "markedButton"> New </div>
+                    <div class = "markedButton"> Soon </div>
 
                     <div class = "upperCard">
 
-                        <img class = "cardImage" src = "images/treeScreen.jpg" draggable="false">
+                        <img class = "cardImage" src = "images/snakeScreen.jpg" draggable="false">
 
                     </div>
                     <div class = "lowerCard">
 
-                        <h3 class = "cardTitle"> Summer Dream </h3>
+                        <h3 class = "cardTitle"> Snake </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -418,7 +418,7 @@
                       </div>
                         </div>
 
-                       <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4172" target="_blank"><button class = "cardButton"> $1.99</button> </a>
+                       <button class = "cardButton"> $1.99</button>
 
                     </div>
                 </div>
@@ -448,6 +448,35 @@
                         </div>
 
                        <button class = "cardButton"> $1.99</button>
+
+                    </div>
+                </div>
+
+                <div class = "mainCard">
+
+                    <div class = "markedButton"> New </div>
+
+                    <div class = "upperCard">
+
+                        <img class = "cardImage" src = "images/treeScreen.jpg" draggable="false">
+
+                    </div>
+                    <div class = "lowerCard">
+
+                        <h3 class = "cardTitle"> Summer Dream </h3>
+
+                        <div class = "infoSection">
+                          <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        </div>
+                        <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                      </div>
+                        </div>
+
+                       <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4172" target="_blank"><button class = "cardButton"> $1.99</button> </a>
 
                     </div>
                 </div>
