--- a/index.html
+++ b/index.html
@@ -452,8 +452,6 @@
 
                 <div class = "mainCard">
 
-                    <div class = "markedButton"> New </div>
-
                     <div class = "upperCard">
 
                         <img class = "cardImage" src = "images/treeScreen.jpg" draggable="false">
@@ -507,8 +505,6 @@
                 </div>
 
                 <div class = "mainCard">
-
-                  <div class = "markedButton"> New </div>
 
                     <div class = "upperCard">
 
@@ -731,9 +727,9 @@
                             </div>
                         </div>
 
-                        <div class = "mainCardSoon">
+                        <div class = "mainCard">
 
-                            <div class = "markedButton"> Soon </div>
+                            <div class = "markedButton"> New </div>
 
                             <div class = "upperCard">
 
@@ -755,7 +751,7 @@
                               </div>
                                 </div>
 
-                               <button class = "cardButton"> $1.99</button>
+                               <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4079" target="_blank"><button class = "cardButton"> $1.99</button></a>
 
                             </div>
                         </div>
