--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </div>
                 <div class = "lowerCard">
 
-                    <h3 class = "cardTitle"> All clockfaces (24+) </h3>
+                    <h3 class = "cardTitle"> All clockfaces (25+) </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -170,7 +170,7 @@
                     </div>
                     <div class = "lowerCard">
 
-                        <h3 class = "cardTitle"> Autumn Collection (5 faces) </h3>
+                        <h3 class = "cardTitle"> Autumn Collection (6 faces) </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -183,7 +183,7 @@
                       </div>
                         </div>
 
-                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3978" target = "_blank" draggable="false"><button class = "cardButton"> $4.99 </button></a>
+                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3978" target = "_blank" draggable="false"><button class = "cardButton"> $5.99 </button></a>
 
                     </div>
 
@@ -572,6 +572,35 @@
                     <div class = "lowerCard">
 
                         <h3 class = "cardTitle"> Fall </h3>
+
+                        <div class = "infoSection">
+                          <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        </div>
+                        <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                      </div>
+                        </div>
+
+                       <button class = "cardButton"> $1.99</button>
+
+                    </div>
+                </div>
+
+                <div class = "mainCardSoon">
+
+                    <div class = "markedButton"> Soon </div>
+
+                    <div class = "upperCard">
+
+                        <img class = "cardImage" src = "images/autumnDayScreen.jpg" draggable="false">
+
+                    </div>
+                    <div class = "lowerCard">
+
+                        <h3 class = "cardTitle"> Autumn Day </h3>
 
                         <div class = "infoSection">
                           <div>
